# MLOPs_Project

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  TODO.md  bentofile.yaml  evaluate.prof  export_onnx.py  index.html  objects.inv  pyproject.toml  setup.sh  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy_docs.yml  linting.yaml  tests.yaml
configs/: augment.yaml  evaluate.yaml  inference.yaml  train.yaml
deployment/api/: index.html
deployment/cloud/: index.html
deployment/docker/: index.html
deployment/frontend/: index.html
development/ci/: index.html
development/hydra/: index.html
development/logging-profiling/: index.html
development/style/: index.html
development/tests/: index.html
dockerfiles/: api.dockerfile  backend.dockerfile  data_drift_demo.dockerfile  evaluation.dockerfile  inference.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: getting-started.md  index.md  my_api.md
docs/source/deployment/: cloud.md  docker.md  frontend.md
docs/source/development/: ci.md  hydra.md  logging-profiling.md  logging.md  profiling.md  style.md  tests.md
docs/source/pipeline/: data.md  data_drift.md  evaluation.md  inference.md  train.md
frontend/: frontend.dockerfile  frontend.py
getting-started/: index.html
my_api/: index.html
pipeline/data/: index.html
pipeline/data_drift/: index.html
pipeline/evaluation/: index.html
pipeline/inference/: index.html
pipeline/train/: index.html
reports/: README.md
scripts/: run_data_drift_demo.sh
search/: search_index.json
src/anomaly_detection/: 03_12_baseline_zero-shot_carpet_Dinov3.ipynb  api.py  api_inference.py  augment_hydra.py  cli.py  data.py  data_drift_demo.py  demo.py  evaluate.py  evaluate_hydra.py  export_onnx_paranoid.py  hydra_utils.py  inference.py  inference_hydra.py  model.py  service.py  train.py  train_hydra.py  vision_transformer.py
src/anomaly_detection/API/: api.py  api_inference.py  service.py
src/anomaly_detection/hydra/: augment_hydra.py  evaluate_hydra.py  inference_hydra.py  train_hydra.py
src/anomaly_detection/layers/: attention.py  block.py  ffn_layers.py  fp8_linear.py  sparse_linear.py
tests/: api_testing.py  test_api.py  test_api_load_perf.py  test_data.py  test_evaluate.py  test_inference.py  test_model.py  test_train.py
